us3 : I can modify a sheet(bug: cannot assign new owner, fixed)

--- a/mydashboard/templates/dashboard/index.html
+++ b/mydashboard/templates/dashboard/index.html
@@ -2,16 +2,15 @@
 {% block content %}
 <section class="h-100">
 	<h2 class="mt-5 pl-5">Bienvenu {{name}} sur le dashboard</h2>
-	<article class="h-100 -5 p-5 container">
+	<article class="h-100 p-3 container ">
 	{% csrf_token %} 
 		<div class="row">
 			<div id='graph' class="graph col-9 bg-primary text-center"></div>
-			<div class="col-1"></div>
-			<div class="col-2  container">
+			<div class="col-3  container">
 				<div class="h-100 bg-primary p-2">
-					<div class="bg-secondary mt-3 h-25 d-flex align-items-center justify-content-center curs-pointer" title="propriétaire(s) devant stériliser">25</div>
-					<div class="bg-secondary mt-3 h-25 d-flex align-items-center justify-content-center curs-pointer" title="propriétaire(s) à contacter">17</div>
-					<div class="bg-secondary mt-3 h-25 d-flex align-items-center justify-content-center curs-pointer" title="propriétaire(s) contacté(s)">8</div>
+					<div class="bg-secondary mt-3 h-25 d-flex align-items-center justify-content-center curs-pointer" title="propriétaire(s) devant stériliser">{{datas.nb_owner_with_obligations}}</div>
+					<div class="bg-secondary mt-3 h-25 d-flex align-items-center justify-content-center curs-pointer" title="propriétaire(s) à contacter"> {{datas.to_contact}} </div>
+					<div class="bg-secondary mt-3 h-25 d-flex align-items-center justify-content-center curs-pointer" title="propriétaire(s) contacté(s)">{{datas.contacted }}</div>
 				</div>
 			</div>
 			<div class="col-1"></div>
@@ -26,43 +25,17 @@
 	<script src="https://code.highcharts.com/highcharts.js"></script>
 	<script type="text/javascript" src='{% static "mydashboard/js/graph.js" %}'> </script>
 	<script type="text/javascript">
-	    let csrftoken = jQuery("[name=csrfmiddlewaretoken]").val();
-        const csrfSafeMethod = function(method) {
-            // these HTTP methods do not require CSRF protection
-            return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
-        }
-        $.ajaxSetup({
-            beforeSend: function (xhr, settings) {
-                // if not safe, set csrftoken
-                if (!csrfSafeMethod(settings.type) && !this.crossDomain) {
-                    xhr.setRequestHeader("X-CSRFToken", csrftoken);
-                }
-            }
-        }); 
-        $.ajax({ 
-            type:"GET", 
-            url: "{% url 'mydashboard:index'%}", 
-            dataType: 'json',
-            data: {'ask_graph_datas':"1"},
-            success: function (res) {
-                console.log(res.status) 
-                console.log(res.cont) 
-                console.log(res.toCont) 
+        console.log(res.status) 
+        console.log("contacted : " + res["cont"]) 
+        console.log("to contact : " + res.toCont) 
 
-                const month = 'Janvier'
-			    const container = 'graph'
-			    const datas = {
-			    	'contacted' :res.cont,
-		            'to contact' : res.toCont,
-		            }
-			    CreateChart(container, datas, month)
-		            },
-		    error: function (res) {
-                alert("erreur lors de l'envoie de données");
-                console.log(res.status);
-                console.log(res.error);
+        const month = 'Janvier'
+	    const container = 'graph'
+	    const datas = {
+	    	'contacted' :res.cont,
+            'to contact' : res.toCont,
             }
-        });
+	    CreateChart(container, datas, month)
 	    
 	</script>
 </section>
