--- a/sheet/templates/sheet/alter.html
+++ b/sheet/templates/sheet/alter.html
@@ -3,7 +3,7 @@
 <section id="alter">
 	<h2 class="mt-5 pl-5">Page Modification Fiche {{animal.name}}</h2>
 	<article class="mt-5 bg-blue">
-		<form class="sheet" action="" method="post" enctype="multipart/form-data">
+		<form id="form_alter" class="sheet" action="" method="post" enctype="multipart/form-data">
 			{% csrf_token %}
 			<div class="container">
 				<div class="row">
@@ -53,13 +53,21 @@
 						<div class="row owner_input d-flex">
 							<div class="col-4 text-center">{{form.owner_name.label}}<br/> {{form.owner_name}}</div>
 							<div class="col-4 text-center">{{form.owner_surname.label}}<br/> {{form.owner_surname}}</div>
-							<div class="col-4 text-center">{{form.owner_sex}}</div>
+							<div class="col-4 text-center very-center">{{form.owner_sex}}</div>
 						</div>
 						<div class="row owner_input d-flex">
 							<div class="col-3 text-center">{{form.phone.label}}<br/> {{form.phone}}</div>
 							<div class="col-4 mb-2 text-center">{{form.mail.label}}<br/> {{form.mail}}</div>
-							<div class="col-5 mt-4 text-center ">
-								<div class="curs-pointer bg-refresh w-100" onclick="Select()">Sélectionner utilisateur existant</div>
+							<div class="col-5 text-center ">
+								<div class="curs-pointer w-100">
+									<label for="id_select" class="m-0">Sélection propriétaire</label>
+									<select id="id_select" name="former_owner">
+										<option value="0" onclick="SelectOption(this.value)">Nouveau Propriétaire</option>
+										{% for owner in owners%}
+										<option value="{{owner.id}}" onclick="SelectOption(this.value)">{{owner}}</option>
+										{% endfor%}
+									</select>
+								</div>
 							</div>		
 						</div>
 					</div>			
@@ -69,12 +77,15 @@
 								<div class="col-12 text-center">{{form.status}}</div>
 								<div class="col-8"></div>
 								<div class="col-4">
-									<input type="submit" class="btn btn-primary big-btn" value="Enregistrer">
+									<button id='submit' class="btn btn-primary big-btn">Enregistrer</button>
 								</div>
 								<div class="col-12">
 									{% if error %}
-									<p> {{error}}</p>
+									<p id="verif"> {{error}}</p>
+									{% else%}
+									<p id="verif"></p>
 									{% endif %}
+									
 								</div>
 							</div>
 						</div>
@@ -93,8 +104,8 @@
 		let divOwners = document.getElementsByClassName('owner_input')
         let divNewFormer = document.getElementById('new-former')	
 		const csrftoken = jQuery("[name=csrfmiddlewaretoken]").val();
-
-
+		let new_owner = false
+		let reaction
 		const Select = function(){
 			for (div of divOwners){
 				div.classList.replace('d-flex', 'd-none')
@@ -102,71 +113,44 @@
 			divNewFormer.classList.replace('d-none', 'd-flex')
 		}
 
-		// creates and displays select with owners name and validate button
-		const SelectOwners = function(){
-			document.getElementById('id_owner_name').value = ""
-			divNF = document.getElementsByClassName("new-former")[0]
-			divFormer = document.getElementsByClassName("former-owner")[0]
-			divNew = document.getElementsByClassName("new-owner")[0]
-			divFormer.classList.add("d-none")
-			divNew.classList.add("d-none")
-			select = document.createElement('select')
-			select.id = "id_select"
-			select.name = "former_owner"
-			divNF.appendChild(select)
-			
-			{% for owner in owners%}
-				option = document.createElement('option')
-				option.value = '{{owner.id}}'
-				option.innerHTML = "{{owner}}"
-				select.appendChild(option)
-			{% endfor %}
-			buttValidate = document.createElement('button')
-			buttValidate.id = 'buttValidate'
-			buttValidate.innerHTML = "valider"
-			divNF.appendChild(buttValidate)
-			document.getElementById('buttValidate').addEventListener('click', function(event){
-				// this functions fills the inputs with the given data from animal
-				
-				value = document.getElementById('id_select').value
-				console.log("jenvoie : " + value)
-				//AJAX
-				const csrfSafeMethod = function(method) {
-	            	// these HTTP methods do not require CSRF protection
-	            	return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
-	        	}
-				$.ajaxSetup({
-	                beforeSend: function (xhr, settings) {
-	                    // if not safe, set csrftoken
-	                    if (!csrfSafeMethod(settings.type) && !this.crossDomain) {
-	                        xhr.setRequestHeader("X-CSRFToken", csrftoken);
-	                    }
-	                }
-	            }); 
-	            $.ajax({ 
-	                type:"POST", 
-	                url: "{% url 'sheet:add'%}", 
-	                dataType: 'json',
-	                data: {'ask_owner_data':"1", 'owner_id':value},
-	                success: function (res) {
-	                    console.log('voici ta réponse : ')
-	                    console.log(res.data.name)
-	                    console.log(res.data.surname)
-	                    console.log(res.data.sex)
-	                    console.log(res.data.phone)
-	                    console.log(res.data.mail)
-	                    dispNewOwn()
-	                    fillBlank(res.data)
-	                    // fillBlank(res.data)
-	                    
-	                },
-	                error: function (res) {
-	                    alert("erreur lors de l'envoie de données");
-	                    console.log(res.status);
-	                    console.log(res.error);
-	                }
-	            })			
-			});
+		const SelectOption = function(value){
+			if (value != "0"){
+				new_owner = false
+				dispNewOwn()
+				fillBlank(value)				
+			}else{
+				new_owner = true
+				removeFromOwnerBlank()
+			}
+		}
+		const SendDatas = function(url, datas, reaction){
+			//AJAX
+			const csrfSafeMethod = function(method) {
+            	// these HTTP methods do not require CSRF protection
+            	return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
+        	}
+			$.ajaxSetup({
+                beforeSend: function (xhr, settings) {
+                    // if not safe, set csrftoken
+                    if (!csrfSafeMethod(settings.type) && !this.crossDomain) {
+                        xhr.setRequestHeader("X-CSRFToken", csrftoken);
+                    }
+                }
+            }); 
+            $.ajax({ 
+                type:"POST", 
+                url: "{% url 'sheet:add'%}", 
+                dataType: 'json',
+                data: datas,
+                success: function(res){
+                	reaction(res.data)
+                	},
+                error: function (res) {
+                    alert("erreur lors de l'envoie de données");
+                    console.log(res.status);
+                    console.log(res.error);
+                }
+            })			
 		}
 		const dispNewOwn = function(){
 			divNF = document.getElementsByClassName("new-former")[0]
@@ -178,7 +162,7 @@
 			removeFromOwnerBlank()
 		}
 		// remove data from owner Form
-		const removeFromOwnerBlank = function(value){
+		const removeFromOwnerBlank = function(){
 			ids = ["id_owner_name", "id_owner_surname", "id_owner_sex", 'id_phone', "id_mail"]
 			for (index in ids){
 				input = document.getElementById(ids[index])
@@ -187,14 +171,18 @@
 		}
 		const fillBlank = function(value){
 			ids = ["id_owner_name", "id_owner_surname", 'id_phone', "id_mail"]
-			values = [value.name, value.surname, value.phone, value.mail]
+			{% for owner in owners%}
+			if ({{owner.id}} == value){
+				values = ['{{owner.owner_name}}', '{{owner.owner_surname}}', '{{owner.phone}}', '{{owner.mail}}', '{{owner.owner_sex}}']
+			}
+			{% endfor %}
 			for (index in ids){
 				input = document.getElementById(ids[index])
 				input.value = values[index]
 			}
 			let inputSex = document.getElementById('id_owner_sex').children;
 			console.log(inputSex, value.sex)
-			if (value.sex == 0){
+			if (values[4] == 0){
 				inputSex[0].firstChild.firstChild.checked = true
 			}else{
 				inputSex[1].firstChild.firstChild.checked = true
@@ -203,53 +191,46 @@
 		}
 		//complete the blank
 		//1 select inputs
-		function appearNewInput(){
+		const appearNewInput = function(){
 			//create an input date
 			let divDate = document.createElement("div");
 			divDate.innerHTML = '{{form.futur_date_of_neuter}}'
 			document.getElementById('inputDateZone').appendChild(divDate);
-
+			document.getElementById('id_futur_date_of_neuter').classList.add('d-none')
+			console.log('appeared')
 		}
-		document.getElementById("id_is_neutered_2").addEventListener('click', function(e){
-			if(e.target.checked){
-				appearNewInput();
-			}
-		})
 
-		function GetTheBlank(){
+		const GetTheBlank = function(){
+			//takes all inputs
 			const inputsNodes = document.querySelectorAll("section#alter input"); 
 			const inputs = Array.from(inputsNodes);	
 			let inputsToFill = new Array()
 			let choicesToMake = new Array()
+
 			for (input of inputs){
 				let count = 0 
+				//split inputs between 2 cat : text and choice
 				for (elem of ['id_species_0','id_species_1','id_species_2','id_species_3', 'id_is_neutered_0', 'id_is_neutered_1', 'id_is_neutered_2', 'id_owner_sex_0', 'id_owner_sex_1']){
 					if (input.id == elem){
 						choicesToMake.push(input);
-						count ++
-					}
-				}
-				if (count == 0){
-					inputsToFill.push(input);
-				}
+						count ++}}
+				if (count == 0){inputsToFill.push(input);}
 			}
-			inputsToFill.splice(0, 1);
-			inputsToFill.pop(inputsToFill.length-1)	
-		return [inputsToFill, choicesToMake];
+			inputsToFill.splice(0, 1);//kick first one, not concerned
+			return [inputsToFill, choicesToMake]; //return array
 		}
 
 		//fills the inputs
-		function FillTheInputs(champs){
+		const FillTheInputs = function(fields){
 			// this functions fills the inputs with the given data from animal
-			values = ['{{animal.name}}','{{animal.date_of_birth|date:"d/m/Y"}}','{{animal.date_of_adoption|date:"d/m/Y"}}','{{animal.admin_data.date_of_neuter|date:"d/m/Y"}}',
-			'{{animal.race}}', '{{animal.color}}', '{{animal.observation}}', "{{animal.admin_data.file}}", "{{animal.admin_data.tatoo}}", "{{animal.admin_data.chip}}", "{{animal.owner.caution}}", "{{animal.owner.tel_reminder}}","{{animal.owner.mail_reminder}}", "{{animal.owner.owner_name}}", "{{animal.owner.owner_surname}}", "{{animal.owner.phone}}", "{{animal.owner.mail}}" ]
+			values = ['{{animal.name}}','{{animal.date_of_birth|date:"d/m/Y"}}','{{animal.date_of_adoption|date:"d/m/Y"}}','{{animal.admin_data.date_of_neuter|date:"d/m/Y"}}', '{{animal.admin_data.date_of_neuter|date:"d/m/Y"}}', '{{animal.race}}', '{{animal.color}}', '{{animal.observation}}', "{{animal.admin_data.file}}", "{{animal.admin_data.tatoo}}", "{{animal.admin_data.chip}}", "{{animal.owner.caution}}", "{{animal.owner.tel_reminder}}","{{animal.owner.mail_reminder}}", "{{animal.owner.owner_name}}", "{{animal.owner.owner_surname}}", "{{animal.owner.phone}}", "{{animal.owner.mail}}" ]
 			for (i in values){
-				champs[i].value = values[i];
+				fields[i].value = values[i];
 			}
 			document.getElementById('id_status').innerHTML = "{{animal.admin_data.status}}"
 		}
 		//make choices
-		function CheckCHoices(checkboxes){
+		const CheckCHoices = function(checkboxes){
 			// this function checks the concerned checkbox according to the given datas for db
 			let choice1 = ('id_species_' + '{{animal.species}}')
 			let choice2 = ('id_is_neutered_' + '{{animal.admin_data.is_neutered}}')
@@ -275,9 +256,81 @@
 				}
 			}
 		}
+		//send a resquest to server to modify db with new datas
+		const AlterDb = function(){
+			if (document.getElementById('id_select').value != 0){
+				new_owner = false
+			}else{
+				new_owner = true}
+		}
 
+		document.getElementById("id_is_neutered").addEventListener('click', function(e){
+			if(document.getElementById("id_is_neutered_2").checked){
+				document.getElementById("id_futur_date_of_neuter").classList.replace('d-none', 'd-flex')
+			}else{
+				document.getElementById("id_futur_date_of_neuter").classList.replace('d-flex', 'd-none')
+			}
+		})
+		const getInputDate = function(){
+			let allInputDate = []
+			keys = [ 'id_date_of_birth', 'id_date_of_adoption', 'id_date_of_neuter', 'id_futur_date_of_neuter']
+			for (key of keys){				
+				allInputDate.push(document.getElementById(key))
+			}
+			if (allInputDate.length == 4){
+				return allInputDate
+			}else{
+				alert('problem dans getInputDate()')}
+		}
+		document.getElementById('submit').addEventListener('click', function(event){
+			
+			let verif = document.getElementById('verif')
+			verif.textContent = ""
+			const dateFields = getInputDate()
+			for (df of dateFields){
+				df.style.border = "1px black solid";
+		        df.style.color = "black";
+			}
+			const regexDate = /^([0-2]\d|3[0-1])\/(0\d|1[0-2])\/(\d{4})$/; 
+			const choiceIsNeutered = function(){
+				for (i of [0,1,2]){
+					if (document.getElementById('id_is_neutered_'+i).checked){
+						return i
+			}}}
+			if (choiceIsNeutered() == 0) {
+				dateFields.splice(3,1)
+				console.log("dateFields après chgt : ")
+				console.log(dateFields)
+			}
+			else if (choiceIsNeutered() == 1) {
+				dateFields.splice(2,2)
+				console.log("dateFields après chgt : ")
+				console.log(dateFields)
+			}
+			else{
+				dateFields.splice(2,1)
+				console.log("dateFields après chgt : ")
+				console.log(dateFields)
+			}
+
+			for (dateField of dateFields){
+				console.log(dateField.value)
+		        if (regexDate.test(dateField.value) && dateField.value != ""){
+		        	//pass
+		        } else{
+		            verifText = "le champ en rouge n'est pas une date au format jj/mm/aaa"
+		            verif.textContent = verifText ;
+		            dateField.style.border = "2px red solid";
+		            dateField.style.color = "red";
+		            event.preventDefault();
+		        }
+		        
+			}
+		});
+
+		document.getElementById('id_select').value = {{animal.owner.id}}
+		appearNewInput();
 		let my_form  = GetTheBlank() //gives the void inputs in order to fill them  
-
 		FillTheInputs(my_form[0])
 		CheckCHoices(my_form[1])
 
