us3 : I can modify a sheet(bug: cannot save datas, fixed)

--- a/mydashboard/templates/dashboard/index.html
+++ b/mydashboard/templates/dashboard/index.html
@@ -8,9 +8,9 @@
 			<div id='graph' class="graph col-9 bg-primary text-center"></div>
 			<div class="col-3  container">
 				<div class="h-100 bg-primary p-2">
-					<div class="bg-secondary mt-3 h-25 d-flex align-items-center justify-content-center curs-pointer" title="propriétaire(s) devant stériliser">{{datas.nb_owner_with_obligations}}</div>
-					<div class="bg-secondary mt-3 h-25 d-flex align-items-center justify-content-center curs-pointer" title="propriétaire(s) à contacter"> {{datas.to_contact}} </div>
-					<div class="bg-secondary mt-3 h-25 d-flex align-items-center justify-content-center curs-pointer" title="propriétaire(s) contacté(s)">{{datas.contacted }}</div>
+					<div class="bg-secondary mt-3 h-25 d-flex align-items-center justify-content-center curs-pointer" title="propriétaire(s) devant stériliser">Propriétaires <br> avec obligations : {{datas.nb_owner_with_obligations}}</div>
+					<div class="bg-secondary mt-3 h-25 d-flex align-items-center justify-content-center curs-pointer" title="propriétaire(s) à contacter"> Propriétaires <br> à contacter :{{datas.to_contact}} </div>
+					<div class="bg-secondary mt-3 h-25 d-flex align-items-center justify-content-center curs-pointer" title="propriétaire(s) contacté(s)">Propriétaires <br> contactés :{{datas.contacted }}</div>
 				</div>
 			</div>
 			<div class="col-1"></div>
