us8 : as a user I can see graph on dashboard(receive data from db ok)

--- a/mydashboard/templates/dashboard/index.html
+++ b/mydashboard/templates/dashboard/index.html
@@ -9,8 +9,8 @@
 			<div class="col-3  container">
 				<div class="h-100 bg-primary p-2">
 					<div class="bg-secondary mt-3 h-25 d-flex align-items-center justify-content-center curs-pointer" title="propriétaire(s) devant stériliser">Propriétaires <br> avec obligations : {{datas.nb_owner_with_obligations}}</div>
-					<div class="bg-secondary mt-3 h-25 d-flex align-items-center justify-content-center curs-pointer" title="propriétaire(s) à contacter"> Propriétaires <br> à contacter :{{datas.to_contact}} </div>
-					<div class="bg-secondary mt-3 h-25 d-flex align-items-center justify-content-center curs-pointer" title="propriétaire(s) contacté(s)">Propriétaires <br> contactés :{{datas.contacted }}</div>
+					<div class="bg-secondary mt-3 h-25 d-flex align-items-center justify-content-center curs-pointer" title="propriétaire(s) à contacter"> Propriétaires <br> à contacter : {{datas.current_to_cont}} </div>
+					<div class="bg-secondary mt-3 h-25 d-flex align-items-center justify-content-center curs-pointer" title="propriétaire(s) contacté(s)">Propriétaires <br> contactés : {{datas.current_cont }}</div>
 				</div>
 			</div>
 			<div class="col-1"></div>
@@ -25,17 +25,15 @@
 	<script src="https://code.highcharts.com/highcharts.js"></script>
 	<script type="text/javascript" src='{% static "mydashboard/js/graph.js" %}'> </script>
 	<script type="text/javascript">
-        console.log(res.status) 
-        console.log("contacted : " + res["cont"]) 
-        console.log("to contact : " + res.toCont) 
 
-        const month = 'Janvier'
-	    const container = 'graph'
+	    const container = 'graph';
 	    const datas = {
-	    	'contacted' :res.cont,
-            'to contact' : res.toCont,
-            }
-	    CreateChart(container, datas, month)
+	    	'contacted' :{{datas.cont}},
+            'to contact' : {{datas.toCont}},
+            'date' : {{datas.date|safe}},
+            };
+
+	    CreateChart(container, datas);
 	    
 	</script>
 </section>
