--- a/sheet/templates/sheet/index.html
+++ b/sheet/templates/sheet/index.html
@@ -20,7 +20,7 @@
                     <tr>
                         <td>&nbsp;</td>
                         <td>nom</td>
-                        <td>statut stérilisation</td>
+                        <td>stérilisation</td>
                         <td>espèce</td>
                         <td>race</td>
                         <td>propriétaire</td>
