--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -11,6 +11,7 @@
   {% load static %}
 	<link href="{% static 'css/bootstrap.min.css'%}" rel="stylesheet" type="text/css" >
 	<link rel="stylesheet" href="{% static 'css/change.css'%}">
+	<link rel="icon" href="{% static 'img/favicon.png'%}">
 
 
 </head>
