us9 : As a user I can display only owner on index page(displays only owners datas in table)

--- a/sheet/templates/sheet/add.html
+++ b/sheet/templates/sheet/add.html
@@ -247,7 +247,7 @@
 			for (input of allInput){
 				if (input.id.substring(0,7) == "id_date"){
 					allInputDate.push(input)
-				}else if dateField.id == "id_date_of_neuter" && dateField.value == ''{
+				}else if (dateField.id == "id_date_of_neuter" && dateField.value == ''){
 					console.log('pas de date de stérilisation')
 				}
 			}
