us9 : As a user I can display only owner on index page(access owner_page)

--- a/core/static/css/change.css
+++ b/core/static/css/change.css
@@ -137,6 +137,11 @@
 	div.former-owner:hover, div.new-owner:hover{
 		background-color: #1a75ff;
 	}
+/* owner_page */
+	.btn-delete{
+		background-color: red;
+		border-color: red;
+	}
 /* mail */ 
 	.mail-but{
 		height: 5rem; 
